--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,29 +1,83 @@
-* {
-  margin:0;
-  padding:0;
-}
+ * {
+   margin:0;
+   padding:0;
+ }
 
 
-/****  Debut page accueil****/
-header{
-  background-color: black;
-  color:white;
-  text-align: center;
-  height:15vh;
-}
+ /****  Debut page accueil****/
+ header{
+   background-color: black;
+   color:white;
+   text-align: center;
+   height:15vh;
+ }
 
 
 main {
-  height: 75vh;
-  background-color:grey;
+   height: 75vh;
+   background-image:url(../image/fondAjouterArticle.jpg);
+   background-size: cover;
+   background-repeat: no-repeat;
+
+ }
+
+ button:hover{
+   background-color: crimson;
+ }
+
+ main button{
+   margin:31% 14% 5% 20%;
+   height:70px;
+   width: 250px;
+   border: 1px solid;
+   background-color: white;
+   color:black;
+   opacity: .7;
+ }
+
+ form{
+   border:1px solid;
+   border-radius: 4%;
+   width:500px;
+   height: 400px;
+   margin-left: 40%;
+   margin-top:8%;
+   background-color: white;
+   opacity: .8;
+   padding:10px;
+ }
+
+#liste,#formulaire{
+  height: 100vh;
+  background-color: #f2e7d9;
 }
 
-footer {
-  height:10vh;
-  background-color: black;
+#formulaire input{
+  margin-bottom:20px;
 }
- /**** fin page accueil ****/
 
- tr, th, td {
-   border: solid;
+#valider{
+  margin-top:80px;
+  margin-left: 35%;
+  width:150px;
+}
+ footer {
+   height:11vh;
+   background-color: black;
+ }
+
+tr,td, th {
+    border: 1px solid;
+    width:70px;
+    padding: 20px;
+ }
+
+ table{
+   border-collapse: collapse;
+   margin-top: 20px;
+   margin-left: 450px;
+ }
+
+ h2{
+   text-align: center;
  }
