--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,81 +3,121 @@
    padding:0;
  }
 
-
  /****  Debut page accueil****/
- header{
-   background-color: black;
-   color:white;
-   text-align: center;
-   height:15vh;
+
+ main{
+   height: 100vh;
+   width: 100vW;
+   background: dimgray;
  }
 
+ h1{
+   font-size: 4em;
+   color: salmon;
+   height: 50px;
+   text-align: center;
+   margin: auto;
+   padding: 30px;
+   text-shadow: 4px 4px 4px gray;
+ }
 
-main {
-   height: 75vh;
-   background-image:url(../image/fondAjouterArticle.jpg);
-   background-size: cover;
-   background-repeat: no-repeat;
+ p{
+   height:50px;
+   width: 220px;
+   color: dimgray;
+   font-weight: bold;
+   font-size: 1.8em;
+   text-align: center;
+   opacity: .8;
+   position: relative;
+   top: -10px;
+   left: -10px;
+ }
 
+ .contenu{
+   float: left;
+   margin: 50px 0px 50px 130px;
+ }
+
+ button{
+      margin: 50px;
  }
 
  button:hover{
-   background-color: crimson;
+   background-color: coral;
  }
 
- main button{
-   margin:31% 14% 5% 20%;
-   height:70px;
-   width: 250px;
-   border: 1px solid;
-   background-color: white;
-   color:black;
-   opacity: .7;
+ #principal{
+   border: 10px dotted dimgray;
+   width: 60%;
+   margin: auto;
+   height: 350px;
+   background: url('../image/fond.jpg');
  }
+
+ img:hover{
+   width: 200px;
+ }
+
+ #infos{
+  width: 80px;
+  height: 30px;
+  position: absolute;
+  top: 450px;
+  left: 1050px;
+ }
+
+/*fin de la page d'accueil*/
+
+/*Debut de la page formulaire*/
+
+#formulaire, #liste{
+  height: 100vh;
+  width: 100vW;
+  background: dimgray;
+}
 
  form{
-   border:1px solid;
+   border: 5px dotted dimgray;
    border-radius: 4%;
-   width:500px;
-   height: 400px;
-   margin-left: 40%;
-   margin-top:8%;
-   background-color: white;
-   opacity: .8;
-   padding:10px;
+   width: 500px;
+   height: 350px;
+   position: relative;
+   top: 50px;
+   left: 370px;
+   background: url('../image/fond.jpg');
+   padding:50px 0 0 50px;
  }
 
-#liste,#formulaire{
-  height: 100vh;
-  background-color: #f2e7d9;
-}
 
 #formulaire input{
   margin-bottom:20px;
 }
 
 #valider{
-  margin-top:80px;
-  margin-left: 35%;
+  margin-top:40px;
+  margin-left: 30%;
   width:150px;
+  height: 50px;
+  background:lightgray;
+  opacity: .8;
 }
- footer {
-   height:11vh;
-   background-color: black;
- }
+
+#valider:hover{
+  background-color: dimgray;
+}
 
 tr,td, th {
-    border: 1px solid;
-    width:70px;
-    padding: 20px;
+    border: 2px groove gold;
+    width:50px;
+    padding: 15px;
+    color: #fff;
  }
 
  table{
-   border-collapse: collapse;
-   margin-top: 20px;
-   margin-left: 450px;
- }
+  border-collapse: collapse;
+  position: relative;
+  top: 100px;
+  left: 200px;
 
- h2{
-   text-align: center;
  }
